Release 3.8.0 (????)
~~~~~~~~~~~~~~~~~~~~

* ================== PLATFORM CHANGES =================

* Support for AES instructions (AESKEYGENASSIST, AESENC, AESENCLAST,
  AESDEC, AESDECLAST, AESIMC).

* ==================== TOOL CHANGES ====================

* Memcheck:

  - The leak_check GDB server monitor command now can
    control the maximum nr of loss records to output.

  - reduction of memory use for applications allocating
    many blocks and/or having many partially defined bytes.

  - Addition of GDB server monitor command 'block_list' that lists
    the addresses/sizes of the blocks of a leak search loss record.

  - Addition of GDB server monitor command 'who_points_at' that lists
    the locations pointing at a block.

  - if a redzone size > 0 is given, VALGRIND_MALLOCLIKE_BLOCK now
    will detect an invalid access of these redzones, by marking them
    noaccess.

* ==================== OTHER CHANGES ====================

* The C++ demangler has been updated so as to work well with C++ 
  compiled by even the most recent g++'s.

* The new option --fair-sched allows to control the locking mechanism
  used by Valgrind. The locking mechanism influences the performance
  and scheduling of multithreaded applications (in particular
  on multiprocessor/multicore systems).

* Support to run Valgrind on Valgrind has been improved.

* ==================== FIXED BUGS ====================

The following bugs have been fixed or resolved.  Note that "n-i-bz"
stands for "not in bugzilla" -- that is, a bug that was reported to us
but never got a bugzilla entry.  We encourage you to file bugs in
bugzilla (https://bugs.kde.org/enter_bug.cgi?product=valgrind) rather than
mailing the developers (or mailing lists) directly -- bugs that are
not entered into bugzilla tend to get forgotten about or ignored.

To see details of a given bug, visit
https://bugs.kde.org/show_bug.cgi?id=XXXXXX
where XXXXXX is the bug number as listed below.
