@@ -27,6 +27,11 @@
     <field name="ID" start="21" end="21"/>
   </flags>
 
+  <struct id="i387_ext_s">
+    <field name="b64" type="uint64"/>
+    <field name="b16" type="uint16"/>
+  </struct>
+
   <reg name="raxs1" bitsize="64" type="int64"/>
   <reg name="rbxs1" bitsize="64" type="int64"/>
   <reg name="rcxs1" bitsize="64" type="int64"/>
@@ -53,14 +58,14 @@
   <reg name="fss1" bitsize="32" type="int32"/>
   <reg name="gss1" bitsize="32" type="int32"/>
 
-  <reg name="st0s1" bitsize="80" type="i387_ext"/>
-  <reg name="st1s1" bitsize="80" type="i387_ext"/>
-  <reg name="st2s1" bitsize="80" type="i387_ext"/>
-  <reg name="st3s1" bitsize="80" type="i387_ext"/>
-  <reg name="st4s1" bitsize="80" type="i387_ext"/>
-  <reg name="st5s1" bitsize="80" type="i387_ext"/>
-  <reg name="st6s1" bitsize="80" type="i387_ext"/>
-  <reg name="st7s1" bitsize="80" type="i387_ext"/>
+  <reg name="st0s1" bitsize="80" type="i387_ext_s"/>
+  <reg name="st1s1" bitsize="80" type="i387_ext_s"/>
+  <reg name="st2s1" bitsize="80" type="i387_ext_s"/>
+  <reg name="st3s1" bitsize="80" type="i387_ext_s"/>
+  <reg name="st4s1" bitsize="80" type="i387_ext_s"/>
+  <reg name="st5s1" bitsize="80" type="i387_ext_s"/>
+  <reg name="st6s1" bitsize="80" type="i387_ext_s"/>
+  <reg name="st7s1" bitsize="80" type="i387_ext_s"/>
 
   <reg name="fctrls1" bitsize="32" type="int" group="float"/>
   <reg name="fstats1" bitsize="32" type="int" group="float"/>
